Update kitty config

--- a/files/kitty.conf
+++ b/files/kitty.conf
@@ -1,27 +1,28 @@
-include themes/AtomOneLight.conf
+include themes/OceanicMaterial.conf
 #cursor #69ff94
 #background #21222C
 
 # setup font settings
-font_size 15
-adjust_line_height 145%
+
 # font_family Monolisa -liga
 # font_family FuraCode Nerd Font
 
 #font_family      JetBrains Mono Medium
-font_family         JetBrains Mono Thin
-bold_font           JetBrains Mono Medium
-italic_font         JetBrains Mono Italic
-bold_italic_font    JetBrains Mono Medium Italic
+font_family JetBrains Mono Regular Nerd Font Complete
+bold_font JetBrains Mono Bold Nerd Font Complete
+italic_font JetBrains Mono Italic Nerd Font Complete
+bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete
+font_size 13
+adjust_line_height 175%
 
 # https://gist.github.com/sts10/56ffa75c87e1cc2af9a9309d5baeb2ff
 
 # shell_integration enabled breaks bash - disable it.
-shell_integration disabled 
+shell_integration disabled
 
 macos_thicken_font 0.55
 
-# set term for better ssh login behaviour in centos linux 
+# set term for better ssh login behaviour in centos linux
 term xterm-256color
 
 # cursor_blink_interval 0
@@ -63,6 +64,10 @@ window_alert_on_bell yes
 map cmd+]        next_window
 map cmd+[        previous_window
 
+map cmd+d launch --location=vsplit
+map shift+cmd+d launch --location=hsplit
+enabled_layouts splits
+
 # clear the terminal screen
 map cmd+k combine : clear_terminal scrollback active : send_text normal,application \x0c
 
@@ -79,6 +84,8 @@ map cmd+equal    change_font_size all +2.0
 map cmd+minus    change_font_size all -2.0
 map cmd+0        change_font_size all 0
 
-# references 
+# references
 #   https://tiemenwaterreus.com/posts/configuring-kitty/
 #   https://github.com/Tmw/dotfiles/blob/master/.config/kitty/kitty.conf
+
+macos_titlebar_color #1c262b
