Update kitty config

--- a/files/kitty.conf
+++ b/files/kitty.conf
@@ -8,12 +8,13 @@ include themes/OceanicMaterial.conf
 # font_family FuraCode Nerd Font
 
 #font_family      JetBrains Mono Medium
-font_family JetBrains Mono Regular Nerd Font Complete
-bold_font JetBrains Mono Bold Nerd Font Complete
-italic_font JetBrains Mono Italic Nerd Font Complete
-bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete
+font_family JetBrains Mono Regular
+bold_font JetBrains Mono Bold
+italic_font JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 font_size 13
 adjust_line_height 175%
+disable_ligatures cursor
 
 # https://gist.github.com/sts10/56ffa75c87e1cc2af9a9309d5baeb2ff
 
