--- a/files/helix/config.toml
+++ b/files/helix/config.toml
@@ -1,8 +1,38 @@
-theme = "theme"
+theme = "catppuccin_macchiato"
 
 [editor]
 line-number = "relative"
-scrolloff = 15
+true-color = true
+undercurl = true
+color-modes = true
+cursorline = true
+auto-save = true
 
 [editor.cursor-shape]
 insert = "bar"
+
+[editor.lsp]
+display-messages = true
+
+[editor.statusline]
+mode.normal = "NORMAL"
+mode.insert = "INSERT"
+mode.select = "SELECT"
+right = ["diagnostics", "version-control", "position", "file-encoding"]
+
+[keys.normal]
+y = "yank_joined_to_clipboard"
+
+[keys.select]
+y = "yank_joined_to_clipboard"
+
+[editor.indent-guides]
+render = true
+
+[editor.whitespace.render]
+space = "none"
+tab = "all"
+newline = "none"
+
+[editor.whitespace.characters]
+tab = "→"
